Improve styling of schema alignment dialog

--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -119,9 +119,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     overflow: auto;
 }
 
+.wbs-item {
+    border: 1px solid #c8ccd1;
+    margin-bottom: 5px;
+    padding-right: 5px;
+}
+
 .wbs-statement-group {
     background: #eaecf0;
     margin-bottom: 5px;
+    border: 1px solid #c8ccd1;
 }
 
 .wbs-statement {
@@ -130,7 +137,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 .wbs-right {
     float: right;
-    width: 75%;
+    width: 85%;
 }
 
 .wbs-statement-group .wbs-right {
@@ -193,6 +200,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .wbs-reference .wbs-statement {
     background-color: #eaf3ff;
 } 
+
+.wbs-namedesc-container {
+   border: 1px solid #c8ccd1;
+}
 
 .wbs-namedesc {
    background-color: #eaecf0;
