--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -229,11 +229,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 /*** Warnings rendering ****/
 
-.schema-alignment-dialog-warnings h1 {
+.wb-warning h1 {
   font-size: 1.2em;
 }
 
-.schema-alignment-dialog-warnings table {
+.schema-alignment-dialog-warnings table,
+.perform-edits-warnings-area table {
   width: 100%;
 }
 
@@ -287,7 +288,8 @@ tr.wb-warning:nth-of-type(odd) {
   float: clear;
 }
 
-div.schema-alignment-dialog-warnings {
+div.schema-alignment-dialog-warnings, 
+div.perform-edits-warnings-area {
   min-height: 340px;
   max-height: 400px;
   overflow-x: hidden;
