--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -62,13 +62,24 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     padding-bottom: 3px;
 }
 
-.wbs-target-input .wbs-draggable-column {
+.ui-droppable .wbs-draggable-column {
     margin: 0px;
+    padding: 0px;
+    padding-left: 2px;
 }
 
 .wbs-reconciled-column {
     border-bottom: 3px solid #282;
     padding-bottom: 1px;
+}
+
+.wbs-restricted-column-name {
+    max-width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .wbs-accepting-input {
@@ -93,13 +104,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .wbs-rank-selector-icon {
    background-position: -36px;
    width: 8px;
+   flex: 0 0 8px;
    height: 20px;
    margin-right: 2px;
    background-image:linear-gradient(transparent,transparent),url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20xmlns:xlink=%22http://www.w3.org/1999/xlink%22%20width=%22107%22%20height=%2220%22%3E%20%3Cdefs%3E%20%3Cpath%20d=%22M3.1%2C0%200%2C3.8%200%2C6%208%2C6%208%2C3.8%204.9%2C0zm8.2%2C7%20-2.3%2C2%200%2C2%202.3%2C2%203.4%2C0%202.3%2C-2%200%2C-2%20-2.3%2C-2zm6.7%2C7%200%2C2.2%203.1%2C3.8%201.8%2C0%203.1%2C-3.8%200%2C-2.2z%22%20id=%22a%22/%3E%20%3Cpath%20d=%22m18.5%2C10.75%200%2C-1.5%202%2C-1.75%203%2C0%202%2C1.75%200%2C1.5%20-2%2C1.75%20-3%2C0zm0%2C-6.75%200%2C1.5%207%2C0%200%2C-1.5%20-2.875%2C-3.5%20-1.25%2C0zm-9%2C12%200%2C-1.5%207%2C0%200%2C1.5%20-2.875%2C3.5%20-1.25%2C0zm0%2C-12%200%2C1.5%207%2C0%200%2C-1.5%20-2.875%2C-3.5%20-1.25%2C0zm-9%2C12%200%2C-1.5%207%2C0%200%2C1.5%20-2.875%2C3.5%20-1.25%2C0zm0%2C-5.25%200%2C-1.5%202%2C-1.75%203%2C0%202%2C1.75%200%2C1.5%20-2%2C1.75%20-3%2C0z%22%20id=%22b%22%20fill=%22none%22/%3E%20%3C/defs%3E%20%3Cuse%20fill=%22%23000%22%20x=%220%22%20y=%220%22%20xlink:href=%22%23a%22/%3E%20%3Cuse%20stroke=%22%23000%22%20x=%220%22%20y=%220%22%20xlink:href=%22%23b%22/%3E%20%3Cuse%20fill=%22%2372777d%22%20x=%2227%22%20y=%220%22%20xlink:href=%22%23a%22/%3E%20%3Cuse%20stroke=%22%2372777d%22%20x=%2227%22%20y=%220%22%20xlink:href=%22%23b%22/%3E%20%3Cuse%20fill=%22%2336c%22%20x=%2254%22%20y=%220%22%20xlink:href=%22%23a%22/%3E%20%3Cuse%20stroke=%22%2336c%22%20x=%2254%22%20y=%220%22%20xlink:href=%22%23b%22/%3E%20%3Cuse%20fill=%22%23447ff5%22%20x=%2281%22%20y=%220%22%20xlink:href=%22%23a%22/%3E%20%3Cuse%20stroke=%22%23447ff5%22%20x=%2281%22%20y=%220%22%20xlink:href=%22%23b%22/%3E%20%3C/svg%3E");
 }
 
 .wbs-item-input, .wbs-prop-input, .wbs-target-input {
-    width: 160px;
+    width: 250px;
     height: 20px;
     /* border: 1px solid #a2a9b1; */
     display: inline-block;
@@ -117,6 +129,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 .wbs-qualifier .wbs-prop-input {
     width: 85px;
+}
+
+.wbs-qualifier .wbs-target-input {
+    width: 120px;
 }
 
 .wbs-item-input input, .wbs-prop-input input, .wbs-target-input input {
@@ -138,6 +154,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .wbs-add-qualifier, .wbs-add-reference, .wbs-add-namedesc {
     color: #0645ad !important;
     font-size: 0.9em;
+}
+
+.wbs-remove {
+    display: inline-block;
 }
 
 .wbs-add-item b, .wbs-add-statement-group b, .wbs-add-statement b,
@@ -213,21 +233,17 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     color: #0645ad !important;
 }
 
-.wbs-qualifier .wbs-target-input {
-    width: 90px;
-}
-
 .wbs-qualifier .wbs-statement {
     overflow: hidden;
 }
 
-.wbs-monolingual-container {
+.wbs-monolingual-container, .wbs-quantity-container {
     display: inline-block;
 }
 
 .wbs-reference-header {
-    height: 20px;
-    overflow: auto;
+    height: 22px;
+    overflow: hidden;
     display: block;
     background-color: #b6c8ec;
 }
@@ -255,8 +271,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 .wbs-namedesc-value {
-   padding-left: 71px;
-   width: 200px;
+   padding-left: 20px;
+   width: 300px;
 }
 
 .wbs-language-input {
