Prettify the UI and add a token to the edit summaries

--- a/extensions/wikidata/module/styles/dialogs/manage-account-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/manage-account-dialog.less
@@ -53,3 +53,12 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   padding-left: 10px;
   text-align: left;
 }
+
+.wikidata-logo {
+  float: left;
+  margin: -10px;
+}
+
+.right-of-logo {
+  margin-left: 110px;
+}
