Improve rendering of suggest fields in Firefox

--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -137,6 +137,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 .wbs-item-input input, .wbs-prop-input input, .wbs-target-input input {
     width: 100%;
+    border: solid #b5b5b5 1px;
+    padding: 2px;
 }
 
 .wbs-draggable-column img {
