Add colors to signal when a suggest input has been validated or not

--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -86,6 +86,15 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     box-shadow: inset 0 0 10px #a7cdff;
 }
 
+.wbs-validated-input {
+   border: 1px solid green !important;
+}
+
+.wbs-unvalidated-input {
+   border: 1px solid red !important;
+   background-color: #ffbfbf;
+}
+
 // The following three rules are taken from Wikibase
 .wbs-icon {
     background-position: center;
