--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -33,6 +33,39 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 @import-less url("../theme.less");
 
+.main-view-panel-tab-header#summary-bar {
+  font-size: 1.3em;
+  font-weight: normal;
+  position: initial;
+}
+
+#wikidata-schema-panel, #wikidata-issues-panel {
+  display: block;
+  overflow: hidden;
+  height: 100%;
+  background-color: white;
+  font-size: 1.2em;
+}
+
+.main-view-panel-tab-header {
+  margin-top: 9px;
+  margin-left: 7px;
+  font-size: 1.3em;
+  display: inline-block;
+  background-color: transparent;
+  color: #11c;
+  padding: 3px 7px;
+}
+
+.main-view-panel-tab-header.active {
+  background-color: #f2f2f2;
+  color: black;
+  border: 1px solid #818fb7;
+  border-bottom: none;
+}
+
+
+
 .schema-alignment-dialog-canvas {
   padding: 0px
   margin-top: 3px;
@@ -43,14 +76,20 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   padding: 10px;
   max-height: 350px;
   min-height: 250px;
-  overflow-y: scroll;
+  overflow-y: auto;
+}
+
+.schema-alignment-explanation {
+  margin: 1em;
 }
 
 .schema-alignment-dialog-columns-area {
   border: 1px solid #bcf;
+  border-left: 0;
+  border-right: 0;
   padding: 5px;
   max-height: 100px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .wbs-draggable-column {
@@ -372,6 +411,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 /*** Warnings rendering ****/
+
+#wikidata-issues-panel table {
+  width: 100%;
+}
 
 .wb-warning h1 {
   font-size: 1.2em;
