Add save and discard buttons on the Wikidata schema

--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.less
@@ -89,6 +89,19 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   margin: 1em;
 }
 
+.schema-alignment-save {
+  float: right;
+  padding: 1em;
+}
+
+.schema-alignment-save button:disabled {
+  color: gray;
+}
+
+.schema-alignment-save button {
+  font-weight: normal;
+}
+
 .schema-alignment-dialog-columns-area {
   border: 1px solid #bcf;
   border-left: 0;
