--- a/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.css
+++ b/extensions/wikidata/module/styles/dialogs/schema-alignment-dialog.css
@@ -19,6 +19,10 @@
   height: 100%;
 }
 
+#schema-alignment-tab {
+  overflow: hidden;
+}
+
 .main-view-panel-tab-header {
   margin-top: 9px;
   margin-left: 7px;
@@ -41,9 +45,8 @@
 }
 
 .schema-alignment-dialog-canvas {
-  padding: 0px
-  margin-top: 3px;
   background: white;
+  overflow-y: auto;
 }
 
 .schema-alignment-dialog-statements-area {
